--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,7 @@
         <phingcall target="build" />
         <exec command="mv ../public_html/ ../previous_stage/" passthru="true" />
         <exec command="mv ${builddir}/deploy/ ../public_html/" passthru="true" />
+        <exec comment="cp -r ../previous_stage/application/config/*.php ../public_html/application/config/" passthru="true" />
         <exec command="rm -rf ../previous_stage/" passthru="true" />
     </target>
 
