Move deploy dir into a variable

--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
     <property name="basedir" value="${project.basedir}" />
     <property name="appdir" value="${basedir}/application" />
     <property name="builddir" value="${basedir}/build" />
+    <property name="deploydir" value="../../weightrace" />
 
     <target name="clean" description="Prep project for CI">
         <exec command="rm -rf ${builddir}" passthru="true" />
@@ -61,10 +62,10 @@
 
     <target name="deploy" description="Build and deploy latest software">
         <phingcall target="build" />
-        <exec command="mv ../public_html/ ../previous_stage/" passthru="true" />
-        <exec command="mv ${builddir}/deploy/ ../public_html/" passthru="true" />
-        <exec comment="cp -r ../previous_stage/application/config/*.php ../public_html/application/config/" passthru="true" />
-        <exec command="rm -rf ../previous_stage/" passthru="true" />
+        <exec command="mv ${deploydir}/ ${deploydir}_previous/" passthru="true" />
+        <exec command="mv ${builddir}/deploy/ ${deploydir}/" passthru="true" />
+        <exec comment="cp -r ${deploydir}_previous/application/config/*.php ${deploydir}/application/config/" passthru="true" />
+        <exec command="rm -rf ${deploydir}_previous/" passthru="true" />
     </target>
 
     <target name="package" description="Build and package for distribution">
