--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,7 @@
         <phingcall target="build" />
         <exec command="mv ${deploydir}/ ${deploydir}_previous/" passthru="true" />
         <exec command="mv ${builddir}/deploy/ ${deploydir}/" passthru="true" />
-        <exec comment="cp -r ${deploydir}_previous/application/config/*.php ${deploydir}/application/config/" passthru="true" />
+        <exec command="cp -r ${deploydir}_previous/application/config/*.php ${deploydir}/application/config/" passthru="true" />
         <exec command="rm -rf ${deploydir}_previous/" passthru="true" />
     </target>
 
